--- a/app/src/main/res/anim/fade_out.xml
+++ b/app/src/main/res/anim/fade_out.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="400"
-    android:interpolator="@android:anim/accelerate_interpolator"
-    android:fromAlpha="1.0" android:toAlpha="0.0"
-    android:fillAfter="true">
-
-</alpha>
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromYDelta="0"
+    android:fillAfter="true"
+    android:toYDelta="100%p"
+    android:duration="700">
+</translate>
